--- a/index.html
+++ b/index.html
@@ -1,115 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modern Chat</title>
+  <meta charset="UTF-8">
+  <title>Chat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fefefe;
     }
+
     nav {
       background-color: #128c7e;
-      padding: 10px 20px;
-      color: white;
+      padding: 15px;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      justify-content: center;
+      gap: 20px;
     }
-    nav h1 {
-      margin: 0;
-      font-size: 1.2rem;
-    }
+
     nav a {
       color: white;
       text-decoration: none;
-      margin-left: 15px;
       font-weight: bold;
+      font-size: 1.1rem;
     }
+
     .container {
-      max-width: 600px;
+      max-width: 800px;
       margin: 30px auto;
       padding: 20px;
-      background-color: white;
+      background: white;
       border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    #joinSection {
+
+    #joinForm {
       display: block;
     }
-    #chatSection {
+
+    #chatWindow {
       display: none;
     }
+
     input[type="text"] {
       width: 100%;
       padding: 10px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-    #messages {
-      list-style: none;
-      padding: 0;
-      max-height: 300px;
-      overflow-y: auto;
-      margin-bottom: 15px;
-    }
-    #messages li {
-      background-color: #e0f2f1;
-      padding: 10px;
       border-radius: 6px;
-      margin-bottom: 8px;
-    }
-    #messageForm {
-      display: flex;
-      gap: 10px;
-    }
-    #messageInput {
-      flex-grow: 1;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
       font-size: 1rem;
+      box-sizing: border-box;
     }
+
     button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
+      width: 100%;
+      padding: 12px;
       background-color: #128c7e;
       color: white;
       font-weight: bold;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
-      background-color: #0f6b61;
+      background-color: #075e54;
+    }
+
+    #messages {
+      list-style-type: none;
+      padding: 0;
+      margin-top: 20px;
+      max-height: 400px;
+      overflow-y: auto;
+    }
+
+    #messages li {
+      margin: 10px 0;
+      padding: 12px 18px;
+      max-width: 70%;
+      border-radius: 20px;
+      word-wrap: break-word;
+      position: relative;
+      clear: both;
+    }
+
+    .sender {
+      background-color: #dcf8c6;
+      align-self: flex-end;
+      margin-left: auto;
+      text-align: right;
+      border-bottom-right-radius: 0;
+    }
+
+    .receiver {
+      background-color: #ececec;
+      align-self: flex-start;
+      margin-right: auto;
+      text-align: left;
+      border-bottom-left-radius: 0;
+    }
+
+    form {
+      display: flex;
+      margin-top: 20px;
+    }
+
+    form input[type="text"] {
+      flex: 1;
+      margin-right: 10px;
     }
   </style>
 </head>
 <body>
+
   <nav>
-    <h1>Chat App</h1>
-    <div>
-      <a href="/index.html">Chat</a>
-      <a href="/movies.html">Movies</a>
-      <a href="/comment.html">Comments</a>
-    </div>
+    <a href="index.html">Chat</a>
+    <a href="movies.html">Movies</a>
+    <a href="comments.html">Comments</a>
   </nav>
+
   <div class="container">
-    <div id="joinSection">
-      <input type="text" id="username" placeholder="Enter your name" />
-      <input type="text" id="roomId" placeholder="Enter Room ID" />
+    <div id="joinForm">
+      <input type="text" id="username" placeholder="Your name" />
+      <input type="text" id="roomId" placeholder="Room ID" />
       <button onclick="joinRoom()">Join Room</button>
     </div>
 
-    <div id="chatSection">
+    <div id="chatWindow">
       <ul id="messages"></ul>
       <form id="messageForm">
-        <input id="messageInput" autocomplete="off" placeholder="Type a message..." />
+        <input id="messageInput" type="text" placeholder="Type a message..." autocomplete="off" />
         <button type="submit">Send</button>
       </form>
     </div>
@@ -118,35 +142,42 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
+    const joinForm = document.getElementById('joinForm');
+    const chatWindow = document.getElementById('chatWindow');
+    const messages = document.getElementById('messages');
+    const form = document.getElementById('messageForm');
+    const input = document.getElementById('messageInput');
+
+    let currentUsername = '';
+    let currentRoomId = '';
 
     function joinRoom() {
       const username = document.getElementById('username').value.trim();
       const roomId = document.getElementById('roomId').value.trim();
       if (!username || !roomId) return;
+
+      currentUsername = username;
+      currentRoomId = roomId;
       socket.emit('chat:joinRoom', { username, roomId });
 
-      document.getElementById('joinSection').style.display = 'none';
-      document.getElementById('chatSection').style.display = 'block';
+      joinForm.style.display = 'none';
+      chatWindow.style.display = 'block';
     }
-
-    const form = document.getElementById('messageForm');
-    const input = document.getElementById('messageInput');
-    const messages = document.getElementById('messages');
 
     form.addEventListener('submit', function (e) {
       e.preventDefault();
       const message = input.value.trim();
-      const roomId = document.getElementById('roomId').value.trim();
-      if (!message || !roomId) return;
-      socket.emit('chat:message', { roomId, message });
+      if (!message) return;
+      socket.emit('chat:message', { roomId: currentRoomId, message, sender: currentUsername });
       input.value = '';
     });
 
-    socket.on('chat:message', function (msg) {
-      if (!msg) return;
+    socket.on('chat:message', function (data) {
+      if (!data.message) return;
       const item = document.createElement('li');
-      console.log("message recived: "+msg.message)
-      item.textContent = msg.message;
+      const isSender = data.sender === currentUsername;
+      item.className = isSender ? 'sender' : 'receiver';
+      item.textContent = `${isSender ? 'You' : data.sender}: ${data.message}`;
       messages.appendChild(item);
       messages.scrollTop = messages.scrollHeight;
     });
