--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Chat</title>
+  <title>Chat Room</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fefefe;
+      background-color: #f1f1f1;
     }
 
     nav {
       background-color: #128c7e;
       padding: 15px;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
+      text-align: center;
     }
 
     nav a {
-      color: white;
+      color: #fff;
+      margin: 0 20px;
       text-decoration: none;
       font-weight: bold;
       font-size: 1.1rem;
@@ -29,10 +32,10 @@
     .container {
       max-width: 800px;
       margin: 30px auto;
-      padding: 20px;
       background: white;
       border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 20px;
     }
 
     #joinForm {
@@ -41,29 +44,28 @@
 
     #chatWindow {
       display: none;
+      flex-direction: column;
+      height: 500px;
     }
 
     input[type="text"] {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 1rem;
-      box-sizing: border-box;
     }
 
     button {
-      width: 100%;
       padding: 12px;
+      width: 100%;
       background-color: #128c7e;
       color: white;
-      font-weight: bold;
       border: none;
       border-radius: 6px;
-      cursor: pointer;
       font-size: 1.1rem;
-      transition: background-color 0.3s ease;
+      cursor: pointer;
     }
 
     button:hover {
@@ -72,46 +74,54 @@
 
     #messages {
       list-style-type: none;
-      padding: 0;
-      margin-top: 20px;
-      max-height: 400px;
+      padding: 10px;
+      margin: 0;
+      flex: 1;
       overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
 
     #messages li {
-      margin: 10px 0;
-      padding: 12px 18px;
       max-width: 70%;
+      padding: 10px 15px;
       border-radius: 20px;
       word-wrap: break-word;
       position: relative;
-      clear: both;
     }
 
     .sender {
-      background-color: #dcf8c6;
       align-self: flex-end;
-      margin-left: auto;
+      background-color: #dcf8c6;
       text-align: right;
       border-bottom-right-radius: 0;
     }
 
     .receiver {
-      background-color: #ececec;
       align-self: flex-start;
-      margin-right: auto;
+      background-color: #ececec;
       text-align: left;
       border-bottom-left-radius: 0;
     }
 
     form {
       display: flex;
-      margin-top: 20px;
+      gap: 10px;
+      margin-top: 15px;
     }
 
-    form input[type="text"] {
+    #messageInput {
       flex: 1;
-      margin-right: 10px;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    form button {
+      flex-shrink: 0;
+      padding: 12px 20px;
     }
   </style>
 </head>
@@ -125,15 +135,15 @@
 
   <div class="container">
     <div id="joinForm">
-      <input type="text" id="username" placeholder="Your name" />
-      <input type="text" id="roomId" placeholder="Room ID" />
-      <button onclick="joinRoom()">Join Room</button>
+      <input type="text" id="username" placeholder="Enter your name" />
+      <input type="text" id="roomId" placeholder="Enter room ID" />
+      <button onclick="joinRoom()">Join Chat Room</button>
     </div>
 
     <div id="chatWindow">
       <ul id="messages"></ul>
       <form id="messageForm">
-        <input id="messageInput" type="text" placeholder="Type a message..." autocomplete="off" />
+        <input id="messageInput" type="text" placeholder="Type your message..." autocomplete="off" />
         <button type="submit">Send</button>
       </form>
     </div>
@@ -145,8 +155,8 @@
     const joinForm = document.getElementById('joinForm');
     const chatWindow = document.getElementById('chatWindow');
     const messages = document.getElementById('messages');
-    const form = document.getElementById('messageForm');
-    const input = document.getElementById('messageInput');
+    const messageForm = document.getElementById('messageForm');
+    const messageInput = document.getElementById('messageInput');
 
     let currentUsername = '';
     let currentRoomId = '';
@@ -158,29 +168,35 @@
 
       currentUsername = username;
       currentRoomId = roomId;
-      socket.emit('chat:joinRoom', { username, roomId });
 
+      socket.emit('chat:joinRoom', { username, roomId });
       joinForm.style.display = 'none';
-      chatWindow.style.display = 'block';
+      chatWindow.style.display = 'flex';
     }
 
-    form.addEventListener('submit', function (e) {
+    messageForm.addEventListener('submit', (e) => {
       e.preventDefault();
-      const message = input.value.trim();
-      if (!message) return;
-      socket.emit('chat:message', { roomId: currentRoomId, message, sender: currentUsername });
-      input.value = '';
+      const msg = messageInput.value.trim();
+      if (!msg) return;
+
+      socket.emit('chat:message', {
+        roomId: currentRoomId,
+        message: msg,
+        sender: currentUsername
+      });
+      messageInput.value = '';
     });
 
-    socket.on('chat:message', function (data) {
+    socket.on('chat:message', (data) => {
       if (!data.message) return;
-      const item = document.createElement('li');
+      const li = document.createElement('li');
       const isSender = data.sender === currentUsername;
-      item.className = isSender ? 'sender' : 'receiver';
-      item.textContent = `${isSender ? 'You' : data.sender}: ${data.message}`;
-      messages.appendChild(item);
+      li.className = isSender ? 'sender' : 'receiver';
+      li.textContent = `${isSender ? 'You' : data.sender}: ${data.message}`;
+      messages.appendChild(li);
       messages.scrollTop = messages.scrollHeight;
     });
   </script>
+
 </body>
 </html>
