--- a/index.html
+++ b/index.html
@@ -57,9 +57,21 @@
       font-size: 1rem;
     }
 
-    button {
+    #joinChatRoom {
       padding: 12px;
       width: 100%;
+      background-color: #128c7e;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 1.1rem;
+      cursor: pointer;
+    }
+
+
+    button {
+      padding: 12px;
+      width: 10%;
       background-color: #128c7e;
       color: white;
       border: none;
@@ -137,7 +149,7 @@
     <div id="joinForm">
       <input type="text" id="username" placeholder="Enter your name" />
       <input type="text" id="roomId" placeholder="Enter room ID" />
-      <button onclick="joinRoom()">Join Chat Room</button>
+      <button id = "joinChatRoom" onclick="joinRoom()">Join Chat Room</button>
     </div>
 
     <div id="chatWindow">
