--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <nav>
     <a href="index.html">Chat</a>
     <a href="movies.html">Movies</a>
-    <a href="comments.html">Comments</a>
+    <a href="comment.html">Comments</a>
   </nav>
 
   <div class="container">
